bugFix: fixed issue with dark mode closed and downgraded highlighting

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -433,3 +433,6 @@ i {
     margin-left: 5px;
 }
 
+.table-danger, .table-warning{
+    color: black;
+}
